--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link href="./css/style.css" rel="stylesheet" />
   <link rel="stylesheet" href="./fonts/font-awesome.min.css">
-
+  <link rel="canonical" href="https://zhunan-trans.com/"/>
   <!-- info -->
   <meta name="twitter:title" content="竹南機場接送" />
   <meta name="twitter:card" content="summary_large_image" />
