--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -21,7 +21,7 @@
   <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1kOhMPTpfm-4J3__bD3pgYVP_Tm2ncAp1" />
   <meta name="keywords"
     content="竹南機場接送|竹南九人座機場接送|竹南松山機場接送|竹南九人座松山機場接送|竹南到機場接送|竹南機場接送推薦|竹南九人座機場接送推薦|竹南桃園機場機場接送|竹南九人座商務洽公包車|竹南九人座包車旅遊接送|苗栗機場接送|苗栗九人座機場接送" />
-  <meta name="description" content="竹南接送租車-竹南機場接送，竹南九人座機場接送！我們提供竹南機場接送，竹南松山機場接送，竹南台中機場接送，包車旅遊，商務洽公等等服務" />
+  <meta name="description" content="竹南接送租車機場接送服務！我們提供車型與服務，包括五人轎車，機場接送、九人座機場接送。服務地區：苗栗機場接送、竹北機場接送、頭份機場接送、新竹機場接送、竹南機場接送，竹東到機場接送等等，往返桃園機場、松山機場、台中機場清泉崗機場等等接送服務。" />
   <meta property="og:type" content="website" />
   <meta name="twitter:description" content="竹南接送租車-竹南機場接送，竹南九人座機場接送！我們提供竹南機場接送，竹南松山機場接送，竹南台中清泉崗機場接送，包車旅遊，商務洽公等等服務" />
   <meta name="twitter:image" content="https://drive.google.com/uc?export=view&id=1kOhMPTpfm-4J3__bD3pgYVP_Tm2ncAp1" />
@@ -135,7 +135,7 @@
                     0966237237
                   </div>
                 </a>
-                <a href="https://m.facebook.com/profile.php?id=100093384415876&eav=AfbLI9ncfitK-PwNp9lNkGNItSBNUoY5LNYE1D-v74mS31yyTW6vKBK7eE-T0rH4VXE&paipv=0">
+                <a href="http://pili.app/fb/SQCPQUgW">
                   <div><i class="fa fa-facebook footer-contacts-icon"></i>
                   竹南機場接送
                   </div>
