update to lastest

--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -21,9 +21,9 @@
   <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1kOhMPTpfm-4J3__bD3pgYVP_Tm2ncAp1" />
   <meta name="keywords"
     content="竹南機場接送|竹南九人座機場接送|竹南松山機場接送|竹南九人座松山機場接送|竹南到機場接送|竹南機場接送推薦|竹南九人座機場接送推薦|竹南桃園機場機場接送|竹南九人座商務洽公包車|竹南九人座包車旅遊接送|苗栗機場接送|苗栗九人座機場接送" />
-  <meta name="description" content="竹南接送租車機場接送服務！我們提供車型與服務，包括五人轎車，機場接送、九人座機場接送。服務地區：苗栗機場接送、竹北機場接送、頭份機場接送、新竹機場接送、竹南機場接送，竹東到機場接送等等，往返桃園機場、松山機場、台中機場清泉崗機場等等接送服務。" />
+  <meta name="description" content="永業租車-機場接送，提供您24小時服務，深夜、淩晨不加價。我們提供車型與服務，包括高級轎車機場接送、九人座機場接送。服務地區：竹南機場接送、苗栗機場接送、頭份機場接送，往返桃園機場、松山機場、 基隆港，等等歡迎來電、加Line預約接送服務。" />
   <meta property="og:type" content="website" />
-  <meta name="twitter:description" content="竹南接送租車-竹南機場接送，竹南九人座機場接送！我們提供竹南機場接送，竹南松山機場接送，竹南台中清泉崗機場接送，包車旅遊，商務洽公等等服務" />
+  <meta name="twitter:description" content="永業租車-竹南機場接送，竹南九人座機場接送！我們提供竹南機場接送，竹南松山機場接送，竹南台中清泉崗機場接送，包車旅遊，商務洽公等等服務" />
   <meta name="twitter:image" content="https://drive.google.com/uc?export=view&id=1kOhMPTpfm-4J3__bD3pgYVP_Tm2ncAp1" />
     <link rel="icon" href="../pictures/favicon.ico" type="image/x-icon" />
   </head>
@@ -38,7 +38,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #292c2f;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html" style="color: #7DB345; font-weight: bold;">竹南接送租車-機場接送</a>
+        <a class="navbar-brand" href="../index.html" style="color: #7DB345; font-weight: bold;">永業租車-機場接送</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -83,22 +83,16 @@
       <div class="col-sm-6 ">
         <div class="card-body ">
           <h5 class="card-title">竹南機場接送</h5>
-          <p class="card-text">竹南機場接送，提供優質載客服務及實惠的價格。</p>
+          <p class="card-text">
+            永業租車-機場接送，提供您24小時服務，深夜、淩晨不加價。
+          </p>
           <p class="card-text"><small class="text-muted">
-            竹南接送租車機場接送服務！我們提供車型與服務，包括五人轎車，機場接送、九人座機場接送。服務地區：竹南機場接送、苗栗機場接送、竹北機場接送、頭份機場接送、新竹機場接送，竹東到機場接送等等，往返桃園機場、松山機場、台中機場清泉崗機場等等接送服務
+            我們提供車型與服務，包括五人轎車機場接送、九人座機場接送。<br>服務地區：竹南機場接送、苗栗機場接送、竹北機場接送、頭份機場接送，往返桃園機場、松山機場、 基隆港接送，等等歡迎來電、加Line預約接送服務。
           </small></p>
         </div>
       </div>
     </div>
-    <br>
-    <br>
-    <div class="row g-1">
-      <!-- nav-picture -end-->
-      <div id="nav-img-block" class="col-sm-11 ">
-        <img id="bg-img" src="../pictures/journey-g1475a1904_640.jpg" alt="pretty journy">
-        <span id="bg-text" >期待參與您的每次旅程</span>
-      </div>
-    </div>
+ 
   </div>
 
   <br>
@@ -108,7 +102,7 @@
       <div class="row">
           <div class="col-sm-6 col-md-4 footer-navigation">
               <h3>
-                <a href="index.html">竹南接送租車-機場接送<span></span></a></h3>
+                <a href="index.html">永業租車-機場接送<span></span></a></h3>
                 <p class="links">
                   <a href="../index.html">機場接送</a>
                   <strong> · </strong>
@@ -119,7 +113,7 @@
                   <a href="./contact.html">聯絡我們</a>
                   <strong> </strong>
                 </p>
-                <p class="company-name">竹南接送租車 © 2023</p>
+                <p class="company-name">永業租車 © 2023</p>
           </div>
           <div class="col-sm-6 col-md-4 footer-contacts">
               <!-- <div>
@@ -142,10 +136,10 @@
                 </a>
           </div>
           <div class="col-md-4 footer-about">
-              <h4>關於公司</h4>
-              <!-- <p> 歡迎蒞臨竹南接送租車服務！我們提供多樣化的車型，包括豪華轎車、休旅車等，以滿足不同客戶的需求。我們的租車服務簡單方便，讓您可以輕鬆地租用車輛，並享受舒適便利的出行體驗。 -->
+              <h4>公司介紹</h4>
+              <!-- <p> 歡迎蒞臨永業租車服務！我們提供多樣化的車型，包括豪華轎車、休旅車等，以滿足不同客戶的需求。我們的租車服務簡單方便，讓您可以輕鬆地租用車輛，並享受舒適便利的出行體驗。 -->
               <p> 
-                竹南接送租車機場接送服務！我們提供車型與服務，包括五人轎車，機場接送、九人座機場接送。服務地區：竹南機場接送、苗栗機場接送、竹北機場接送、頭份機場接送、新竹機場接送，竹東到機場接送等等，往返桃園機場、松山機場、台中機場清泉崗機場等等接送服務。
+                永業租車-機場接送服務！我們提供車型與24小時接送服務服務，包括舒適轎車，機場接送、九人座機場接送。服務地區：苗栗機場接送、竹南場接送、頭份機場接送、通宵機場接送、後龍到機場接送等等，往返桃園機場、松山機場、基隆港、台北港、等等接送服務。
               </p>
               <!-- <div class="social-links social-icons">
                 <a href="https://goo.gl/maps/bo5oBa6S2q81uwmw9"><i class="fa fa-map-marker"></i></a>
