--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
   <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1kOhMPTpfm-4J3__bD3pgYVP_Tm2ncAp1" />
   <meta name="keywords"
     content="竹南機場接送|竹南九人座機場接送|竹南松山機場接送|竹南九人座松山機場接送|竹南到機場接送|竹南機場接送推薦|竹南九人座機場接送推薦|竹南桃園機場機場接送|竹南九人座商務洽公包車|竹南九人座包車旅遊接送|苗栗機場接送|苗栗九人座機場接送" />
-  <meta name="description" content="竹南接送租車機場接送服務！我們提供車型與服務，包括五人轎車，機場接送、九人座機場接送。服務地區：苗栗機場接送、竹北機場接送、頭份機場接送、新竹機場接送、竹南機場接送，竹東到機場接送等等，往返桃園機場、松山機場、台中機場清泉崗機場等等接送服務。" />
+  <meta name="description" content="永業租車-機場接送，提供您24小時服務，深夜、淩晨不加價。我們提供車型與服務，包括高級轎車機場接送、九人座機場接送。服務地區：竹南機場接送、苗栗機場接送、頭份機場接送，往返桃園機場、松山機場、 基隆港，等等歡迎來電、加Line預約接送服務。" />
   <meta property="og:type" content="website" />
-  <meta name="twitter:description" content="竹南接送租車-竹南機場接送，竹南九人座機場接送！我們提供竹南機場接送，竹南松山機場接送，竹南台中機場接送，包車旅遊，商務洽公等等服務" />
+  <meta name="twitter:description" content="永業租車-竹南機場接送，竹南九人座機場接送！我們提供竹南機場接送，竹南松山機場接送，竹南台中機場接送，包車旅遊，商務洽公等等服務" />
   <meta name="twitter:image" content="https://drive.google.com/uc?export=view&id=1kOhMPTpfm-4J3__bD3pgYVP_Tm2ncAp1" />
   <link rel="icon" href="./pictures/favicon.ico" type="image/x-icon" />
 </head>
@@ -33,7 +33,7 @@
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #292c2f;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="color: #7DB345; font-weight: bold;">竹南接送租車-機場接送</a>
+      <a class="navbar-brand" href="#" style="color: #7DB345; font-weight: bold;">永業租車-機場接送</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -61,7 +61,7 @@
   <!-- <hr> -->
   <!-- card1-start -->
   <div id="nav-img-block" style="background-color: rgb(235, 237, 238);">
-    <span id="car-text" class="display-1">竹南機場接送</span>
+    <span id="car-text" class="display-1">機場接送</span>
     <img id="car-img" src="./pictures/car-heavy-compressed.gif" alt="car" style="width: 20%;height: auto;">
     <!-- <video id="car-img" loop autoplay="autoplay" src="./pictures/car.webm" alt="nav-picture" style="width: 20%;height: auto;" > -->
   </div>
@@ -97,12 +97,12 @@
         </div>
 
         <div class="card-body ">
-          <h5 class="card-title">竹南機場接送</h5>
-          <p class="card-text">機場接送包括，竹南機場接送、竹南九人座機場接送，當您抵達機場時，專業的機場接送司機會在指定的地點等候，為您提供安全、快速、準時的機場接送服務，讓您輕鬆往返機場、住家、公司。同時，我們還提供接送行李、提前預訂機場接送等貼心服務，讓您的旅程更加順利。
+          <h5 class="card-title">永業租車-竹南機場接送</h5>
+          <p class="card-text">我們提供24小時專業、安全、舒適的車輛為您提供您往返機場、港口接送，我們也提供提前預約，機場接送、港口接送，讓您的旅程更加方便、順利。
 
           </p>
           <u class="card-text weak">
-            竹南接送機場服務地區包括：竹南松山機場接送，竹南桃園機場接送，苗栗機場接送，包車旅遊
+            服務項目：<br>竹南機場接送、頭份機場接送、苗栗機場接送、基隆港接送、九人座機場接送、包車旅遊接送，等等租車接送服務。
           </u>
           <p class="card-text"><small class="text-muted">Last updated 1 day ago</small></p>
         </div>
@@ -159,12 +159,13 @@
           </div>
         </div>
           <div class="card-body ">
-            <h5 class="card-title">竹南九人座機場接送</h5>
+            <h5 class="card-title">竹南九人接送機場服務地區</h5>
             <p class="card-text">
-              無論您是與家人、朋友或同事一同旅行，我們提供九人座機場接送，九人座包車旅遊專車能夠滿足您的需求。我們的車輛寬敞舒適，提供舒適的座椅和充足的行李空間，讓您和您的同伴享受愉快的旅程。
-            </p>
+              包括：竹南九人座松山機場接送、竹南九人座桃園機場接送、苗栗九人座機場接送、九人座包車旅遊接送。
+              <br>
+              <h5 class="card-title">竹南九人座機場接送</h5>
               <u class="card-text weak">
-                九人接送機場服務地區包括：竹南九人座松山機場接送，竹南九人座桃園機場接送，苗栗九人座機場接送，九人座包車旅遊接送
+                我們也提供九人座機場接送滿足您多人出遊、一同出國、洽公，我們24小時服務的，九人座機場接送，九人座包車旅遊，能夠滿足您的需求。輛寬敞、舒適和充足的行李空間，讓您和您的同伴享受愉快的旅程。
               </u>
             <p class="card-text"><small class="text-muted">Just Update</small></p>
           </div>
@@ -201,7 +202,7 @@
     <div class="row">
       <div class="col-sm-6 col-md-4 footer-navigation">
         <h3>
-          <a href="index.html">竹南接送租車-機場接送<span></span></a>
+          <a href="index.html">永業租車-機場接送<span></span></a>
         </h3>
         <p class="links">
           <a href="index.html">機場接送</a>
@@ -213,7 +214,7 @@
           <a href="./pages/contact.html">聯絡我們</a>
           <strong> </strong>
         </p>
-        <p class="company-name">竹南接送租車 © 2023</p>
+        <p class="company-name">永業租車 © 2023</p>
       </div>
       <div class="col-sm-6 col-md-4 footer-contacts">
         <!-- <div>
@@ -236,9 +237,9 @@
         </a>
       </div>
       <div class="col-md-4 footer-about">
-        <h4>關於公司</h4>
+        <h4>公司介紹</h4>
         <p>
-          竹南接送租車機場接送服務！我們提供車型與服務，包括五人轎車，機場接送、九人座機場接送。服務地區：苗栗機場接送、竹北機場接送、頭份機場接送、新竹機場接送、竹南機場接送，竹東到機場接送等等，往返桃園機場、松山機場、台中機場清泉崗機場等等接送服務。
+          永業租車-機場接送服務！我們提供車型與24小時接送服務服務，包括舒適轎車，機場接送、九人座機場接送。服務地區：苗栗機場接送、竹南場接送、頭份機場接送、通宵機場接送、後龍到機場接送等等，往返桃園機場、松山機場、基隆港、台北港、等等接送服務。
         </p>
         <!-- <div class="social-links social-icons">
               <a href="https://goo.gl/maps/bo5oBa6S2q81uwmw9"><i class="fa fa-map-marker"></i></a>
