更新QR code 和連結

--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
         <div class="row mb-3">
 
           <div class="col-6">
-            <button type="button" onclick=location.href="https://line.me/ti/p/xeApvGrPD7"
+            <button type="button" onclick=location.href="https://line.me/ti/p/Fi4EQf8jpC"
             class="btn  btn-costume btn-lg h-100 w-100 mb-3"style="border-radius:10px;background-color:rgb(87,190,55)">
             <h3>加入<br>LINE</h3>
           </button>
@@ -175,7 +175,7 @@
           <div class="row mb-3">
 
             <div class="col-6">
-              <button type="button" onclick=location.href="https://line.me/ti/p/xeApvGrPD7"
+              <button type="button" onclick=location.href="https://line.me/ti/p/Fi4EQf8jpC"
               class="btn  btn-costume btn-lg h-100 w-100 mb-3"style="border-radius:10px;background-color:rgb(87,190,55)">
               <h3>加入<br>LINE</h3>
             </button>
@@ -277,7 +277,7 @@
 
     <script>
       document.getElementById('ad').addEventListener('click', function () {
-      //  window.location.href = "https://line.me/ti/p/xeApvGrPD7"
+      //  window.location.href = "https://line.me/ti/p/Fi4EQf8jpC"
       })
     </script>
 </body>
