--- a/public/pages/airportTrans.html
+++ b/public/pages/airportTrans.html
@@ -72,7 +72,7 @@
    <div class="row mb-3">
 
             <div class="col-6">
-              <button type="button" onclick=location.href="https://line.me/ti/p/xeApvGrPD7"
+              <button type="button" onclick=location.href="https://line.me/ti/p/Fi4EQf8jpC"
               class="btn  btn-costume btn-lg h-100 w-100 mb-3"style="border-radius:10px;background-color:rgb(87,190,55)">
               <h3>加入<br>LINE</h3>
             </button>
@@ -164,7 +164,7 @@
   <!-- <div class="card  ">
     <div class="row g-0 ">
        <div class="col-sm-3 ">
-        <button type="button" onclick=location.href="https://line.me/ti/p/xeApvGrPD7"
+        <button type="button" onclick=location.href="https://line.me/ti/p/Fi4EQf8jpC"
           class="btn btn-costume btn-lg h-100 w-100"><h3>立即聯絡</h3></button>
       </div>
       <div class="col-sm-4">
@@ -277,7 +277,7 @@
   </div>
   <script >
     document.getElementById('ad').addEventListener('click',function(){
-      //window.location.href="https://line.me/ti/p/xeApvGrPD7"
+      //window.location.href="https://line.me/ti/p/Fi4EQf8jpC"
     })
   </script>
   <!-- 測邊浮動視窗 end -->
