--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -74,7 +74,7 @@
           <div id="carouselExampleCaptions" class=" carousel slide w-100 ">
             <div class="carousel-inner fly-img ">
               <div class="carousel-item active ">
-                <a href="https://line.me/ti/p/xeApvGrPD7"><img src="../pictures/new-line.png" class="d-block w-100 " alt="Line-image"></a>
+                <a href="https://line.me/ti/p/Fi4EQf8jpC"><img src="../pictures/new-line.png" class="d-block w-100 " alt="Line-image"></a>
               </div>
             </div>
           </div>
