--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>竹南機場接送</title>
+    <title>永業租車｜竹南機場接送</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../fonts/font-awesome.min.css">
 
     <!-- info -->
-    <meta name="twitter:title" content="竹南機場接送" />
+    <meta name="twitter:title" content="永業租車｜竹南機場接送" />
   <meta name="twitter:card" content="summary_large_image" />
   <!-- <meta property="og:image" content="https://drive.google.com/file/d/1WCJNJRvxOO8--ghwSNfOKvwEP4dzxLU3/view?usp=share_link" /> -->
   <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1kOhMPTpfm-4J3__bD3pgYVP_Tm2ncAp1" />
@@ -38,7 +38,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #292c2f;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html" style="color: #7DB345; font-weight: bold;">永業租車-機場接送</a>
+        <a class="navbar-brand" href="../index.html" style="color: #7DB345; font-weight: bold;">永業租車｜竹南機場接送</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
