--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>竹南機場接送</title>
+  <title>永業租車｜竹南機場接送</title>
   <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="./fonts/font-awesome.min.css">
   <link rel="canonical" href="https://zhunan-trans.com/"/>
   <!-- info -->
-  <meta name="twitter:title" content="竹南機場接送" />
+  <meta name="twitter:title" content="永業租車｜竹南機場接送" />
   <meta name="twitter:card" content="summary_large_image" />
   <!-- <meta property="og:image" content="https://drive.google.com/file/d/1WCJNJRvxOO8--ghwSNfOKvwEP4dzxLU3/view?usp=share_link" /> -->
   <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1kOhMPTpfm-4J3__bD3pgYVP_Tm2ncAp1" />
@@ -33,7 +33,7 @@
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #292c2f;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="color: #7DB345; font-weight: bold;">永業租車-機場接送</a>
+      <a class="navbar-brand" href="#" style="color: #7DB345; font-weight: bold;">永業租車｜竹南機場接送</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
